[package]
name = "RoadRaceRustyEngine"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
publish = false
authors = ["Shubhendu Anupam Dutta <shubhenduanupam@gmail.com>"]
repository = "https://github.com/shubhenduanupamdutta/RoadRaceRustyEngine"
license = "MIT"

[dependencies]


[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
all = "deny"

[lints.rust]
nonstandard_style = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
# rust_2018_idioms = {level="deny", priority = -1}
rust_2021_compatibility = { level = "deny", priority = -1 }
# missing_copy_implementation = "deny"
unsafe_code = "deny"
# missing_docs = "deny"
deprecated = "deny"
deprecated_in_future = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"
unreachable_pub = "deny"
non_ascii_idents = "deny"
missing_debug_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "warn"
unused_import_braces = "warn"
unused_imports = "warn"